tests/ui/input/union.stderr
error: expected a struct or an enum, found a union
 --> tests/ui/input/union.rs:5:1
  |
5 | union Test<T> {
  | ^^^^^
